// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Typography Component prop use 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 2.5rem;
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 2.25rem;
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 2rem;
  font-size: 1.375rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.75rem;
  font-size: 1.25rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.5rem;
  font-size: 1.125rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-7 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 0.1;
}

.emotion-8 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.1;
}

.emotion-9 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 700;
  letter-spacing: .25;
}

.emotion-10 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.1;
}

.emotion-11 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: .25;
}

.emotion-12 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 500;
  letter-spacing: .25;
}

.emotion-13 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: .25;
}

.emotion-14 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: .25;
}

.emotion-15 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 400;
  letter-spacing: .25;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-2"
        >
          Headline 01 - H1
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-3"
        >
          Headline 02 - H2
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-4"
        >
          Headline 03 - H3
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-5"
        >
          Headline 04 - H4
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-6"
        >
          Headline 05 - H5
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-7"
        >
          Title 01 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 02 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-9"
        >
          Title 03 - H6
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-10"
        >
          Label 01 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 02 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-12"
        >
          Label 03 - SPAN
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-13"
        >
          Body 01 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-14"
        >
          Body 02 - P
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-15"
        >
          Body 03 - P
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Typography Type prop use 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  font-family: Roboto;
  line-height: 2.5rem;
  font-size: 1.75rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-3 {
  font-family: Roboto;
  line-height: 2.25rem;
  font-size: 1.5rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-4 {
  font-family: Roboto;
  line-height: 2rem;
  font-size: 1.375rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-5 {
  font-family: Roboto;
  line-height: 1.75rem;
  font-size: 1.25rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-6 {
  font-family: Roboto;
  line-height: 1.5rem;
  font-size: 1.125rem;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-7 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 700;
  letter-spacing: 0.1;
}

.emotion-8 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.1;
}

.emotion-9 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 700;
  letter-spacing: .25;
}

.emotion-10 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.1;
}

.emotion-11 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: .25;
}

.emotion-12 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 500;
  letter-spacing: .25;
}

.emotion-13 {
  font-family: Roboto;
  line-height: 1.375rem;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: .25;
}

.emotion-14 {
  font-family: Roboto;
  line-height: 1.25rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: .25;
}

.emotion-15 {
  font-family: Roboto;
  line-height: NaNrem;
  font-size: 0.625rem;
  font-weight: 400;
  letter-spacing: .25;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h1
          className="emotion-2"
        >
          Headline 01
        </h1>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h2
          className="emotion-3"
        >
          Headline 02
        </h2>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h3
          className="emotion-4"
        >
          Headline 03
        </h3>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h4
          className="emotion-5"
        >
          Headline 04
        </h4>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h5
          className="emotion-6"
        >
          Headline 05
        </h5>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-7"
        >
          Title 01
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-8"
        >
          Title 02
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <h6
          className="emotion-9"
        >
          Title 03
        </h6>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-10"
        >
          Label 01
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-11"
        >
          Label 02
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <span
          className="emotion-12"
        >
          Label 03
        </span>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-13"
        >
          Body 01
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-14"
        >
          Body 02
        </p>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <p
          className="emotion-15"
        >
          Body 03
        </p>
      </div>
    </div>
  </div>
</div>
`;
